--- a/node-backend-starter-code/package.json
+++ b/node-backend-starter-code/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.12.0",
     "express": "^4.12.2",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "request": "^2.72.0",
+    "requests": "^0.1.7"
   }
 }
